--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,10 +6,12 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        >
         <activity
             android:name=".ui.MainActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden">
 
         </activity>
@@ -21,6 +23,7 @@
 
         <activity android:name=".ui.SplashActivity"
             android:label="@string/app_name"
+            android:screenOrientation="portrait"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -29,7 +32,8 @@
             </intent-filter>
             </activity>
 
-        <activity android:name=".ui.SettingsActivity">
+        <activity android:name=".ui.SettingsActivity"
+            android:screenOrientation="portrait">
 
         </activity>
     </application>
